crates/ridl-backend-rust/src/snapshots/ridl_backend_rust__tests__appendix_a_c_header_snapshot.snap
---
source: crates/ridl-backend-rust/src/tests.rs
expression: c_header
---
/* Generated from RIDL package veh.cluster (IR ridl.ir.v2).
 *
 * Extern-C ABI face for the typl language layer (typl reference Appendix D,
 * ADR-0007 decision 13). This file is generated; do not edit.
 *
 * String-backed constants and types are omitted here rather than mapped to a
 * value type: C has no owning string value. The generated Rust exposes them as
 * `&str` constants (the documented asymmetry).
 *
 * Identifiers carrying another package's prefix (for example
 * `ridl_std_timestamp`) are declared in that package's own generated header;
 * include it alongside this one.
 */
#ifndef VEH_CLUSTER_H
#define VEH_CLUSTER_H

#include <stdbool.h>
#include <stdint.h>

enum veh_cluster_diag_error {
    VEH_CLUSTER_DIAG_ERROR_FILTER_INVALID = 0,
    VEH_CLUSTER_DIAG_ERROR_STORAGE_BUSY = 1,
    VEH_CLUSTER_DIAG_ERROR_ACCESS_DENIED = 2
};

typedef struct {
    int64_t sensorId;
    bool isOpen;
} veh_cluster_door_payload;

/* not representable in C ABI:
 *   struct DiagFilter — variable layout (optional, string, or collection field)
 *   struct FaultEvent — variable layout (optional, string, or collection field)
 *   struct FaultPage — variable layout (optional, string, or collection field)
 *   union FaultPageResult — tagged union
 */

/* not represented in the C ABI — interactions are a binding concern, not a data layout: interface VehicleStatus */

#endif /* VEH_CLUSTER_H */
