crates/ridl-backend-rust/src/snapshots/ridl_backend_rust__tests__appendix_a_rust_snapshot.snap
---
source: crates/ridl-backend-rust/src/tests.rs
expression: rust_source
---
#[repr(C)]
pub struct DoorPayload {
    pub sensorId: i64,
    pub isOpen: bool,
}
impl Default for DoorPayload {
    fn default() -> Self {
        DoorPayload {
            sensorId: 0,
            isOpen: false,
        }
    }
}
pub struct DiagFilter {
    pub severity: i64,
    pub category: Option<crate::ridl::std::Label>,
}
impl Default for DiagFilter {
    fn default() -> Self {
        DiagFilter {
            severity: 0,
            category: None,
        }
    }
}
pub struct FaultEvent {
    pub code: i64,
    pub message: crate::ridl::std::Message,
    pub timestamp: crate::ridl::std::Timestamp,
}
#[repr(i64)]
pub enum DiagError {
    FILTER_INVALID = 0,
    STORAGE_BUSY = 1,
    ACCESS_DENIED = 2,
}
impl Default for DiagError {
    fn default() -> Self {
        DiagError::FILTER_INVALID
    }
}
pub struct FaultPage {
    pub faults: Vec<FaultEvent>,
}
impl Default for FaultPage {
    fn default() -> Self {
        FaultPage { faults: Vec::new() }
    }
}
pub enum FaultPageResult {
    Page(FaultPage),
    Err(DiagError),
}
impl Default for FaultPageResult {
    fn default() -> Self {
        FaultPageResult::Page(FaultPage::default())
    }
}
/// Where a signal's current value came from (ridl §4.4, §4.5).
///
/// `Init` is the channel's seeded value, before the provider's first
/// publication; `Live` is a published value; `Invalid` marks a value
/// that violated the payload constraints — the malformed value is not
/// delivered, but its invalidity is, so no subscriber silently holds
/// stale last-good data.
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum Provenance {
    Init,
    Live,
    Invalid,
}
/// A signal channel: state that always holds a value (ridl §4.4).
pub trait SignalHandle<T> {
    /// The current value and where it came from. Never fails: the
    /// channel is seeded with the init value at creation.
    fn read(&self) -> (T, Provenance);
    /// Registers a subscriber. It is called immediately with the
    /// current value, then on every change.
    fn subscribe(&mut self, f: Box<dyn FnMut(&T, Provenance)>);
}
/// An event channel: occurrences, which are not state (ridl §5). There
/// is no `read` — an occurrence that has not happened has no value.
pub trait EventHandle<T> {
    fn subscribe(&mut self, f: Box<dyn FnMut(&T)>);
}
/// A finite or unbounded sequence of payloads (ridl §12).
///
/// Declared here rather than taken from a runtime crate so the
/// generated module stays dependency-free; it is shaped so an adapter
/// to `futures::Stream` is a blanket impl.
pub trait RidlStream {
    type Item;
    fn poll_next(
        self: core::pin::Pin<&mut Self>,
        cx: &mut core::task::Context<'_>,
    ) -> core::task::Poll<Option<Self::Item>>;
}
/// How a timing annotation constrains an interaction (ridl §9).
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum TimingMode {
    StrictPeriodic,
    Range,
}
/// One interaction's resolved timing, in exact microseconds.
///
/// `min_us` is the rate floor and `max_us` the staleness bound; a strict
/// period carries the same value in both. `default_applied` records that
/// the contract was written without a `@` annotation and the configured
/// default was resolved in (ridl §9.1).
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub struct TimingConst {
    pub mode: TimingMode,
    pub min_us: Option<u64>,
    pub max_us: Option<u64>,
    pub default_applied: bool,
}
/// Which side of an interaction a contract clause constrains (ridl §13).
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum ContractKind {
    Require,
    Ensure,
}
/// One contract clause as data, for an observer to install.
///
/// `id` is the observer address the IR assigns; it is a stable identity
/// carried verbatim, not a Rust name. `uses_result` says whether the
/// clause reads the query's result, which an `ensure` observer must
/// know before it can be scheduled — it cannot run until the result
/// exists. The flag is carried rather than inferred: `source` is text,
/// so matching on it would misread a parameter named `resultCode` or a
/// field access `.result`, and an `ensure` clause does not always read
/// the result.
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub struct ContractStub {
    pub id: &'static str,
    pub kind: ContractKind,
    pub source: &'static str,
    pub signals: &'static [&'static str],
    pub params: &'static [&'static str],
    pub uses_result: bool,
}
/// Main vehicle status interface.
/// labels: SIL_B, CAL_2, PRIVATE
/// reserved ordinal 6 (`resetCounters`) — retired, never reused.
/// The consumer face of `VehicleStatus` — what a component that uses this interface calls (ridl §10.1).
#[allow(async_fn_in_trait)]
pub trait VehicleStatusConsumer {
    /// Current vehicle speed
    ///
    /// signal `currentSpeed` — ordinal 1 (ridl §4).
    /// The channel is never empty: a read before the provider's first publication yields `0`, and every read carries its provenance (`Init`, `Live`, or `Invalid` — ridl §4.4, §4.5).
    fn current_speed(&mut self) -> &mut dyn SignalHandle<crate::veh::common::Speed>;
    /// Engine temperature
    ///
    /// signal `engineTemp` — ordinal 2 (ridl §4).
    /// The channel is never empty: a read before the provider's first publication yields `0`, and every read carries its provenance (`Init`, `Live`, or `Invalid` — ridl §4.4, §4.5).
    fn engine_temp(&mut self) -> &mut dyn SignalHandle<crate::veh::common::Temperature>;
    /// Active warnings
    ///
    /// signal `warnings` — ordinal 3 (ridl §4).
    /// The channel is never empty: a read before the provider's first publication yields the payload type's init value, and every read carries its provenance (`Init`, `Live`, or `Invalid` — ridl §4.4, §4.5).
    fn warnings(&mut self) -> &mut dyn SignalHandle<crate::veh::common::WarningFlags>;
    /// Raised on every door state change
    ///
    /// event `doorOpened` — ordinal 4 (ridl §5).
    /// An occurrence is not state: there is no last-value cache and no provenance.
    fn door_opened(&mut self) -> &mut dyn EventHandle<DoorPayload>;
    /// Request a gear change
    ///
    /// command `setGear` — ordinal 5 (ridl §6).
    /// Always returns `()`. A delivery acknowledgment travels beneath the call — the receiving binding confirms received and accepted for execution — but it carries no functional payload, never reaches the contract surface, and is not application-visible as a return value (ridl §6.1). Observable results travel back as state.
    /// A transport failure is an infrastructure failure — detected, undeclared (gf §6.4): it is carried by runtime types, never by this signature.
    /// require: position != GearPosition.PARK || currentSpeed == 0.0
    async fn set_gear(&self, position: crate::veh::common::GearPosition);
    /// Sliding-window average
    ///
    /// query `getAverageSpeed` — ordinal 7 (ridl §7).
    /// A transport failure is an infrastructure failure — detected, undeclared (gf §6.4): it is carried by runtime types, never by this signature.
    /// require: window > 0ms
    /// ensure: result >= 0.0
    async fn get_average_speed(
        &self,
        window: crate::ridl::std::Duration,
    ) -> crate::veh::common::Speed;
    /// Fault history as a finite stream
    ///
    /// query `streamFaults` — ordinal 8 (ridl §7).
    /// A transport failure is an infrastructure failure — detected, undeclared (gf §6.4): it is carried by runtime types, never by this signature.
    fn stream_faults(&self, filter: DiagFilter) -> impl RidlStream<Item = FaultEvent>;
    /// Paged fault snapshot
    ///
    /// query `getFaultPage` — ordinal 9 (ridl §7).
    /// A transport failure is an infrastructure failure — detected, undeclared (gf §6.4): it is carried by runtime types, never by this signature.
    async fn get_fault_page(&self, filter: DiagFilter) -> FaultPageResult;
    /// final `softwareVersion` — ordinal 10 (ridl §8).
    /// Provisioned externally and immutable for the lifetime of the running software instance: read-only, free of the query machinery, and safe to cache unconditionally.
    fn software_version(&self) -> &crate::ridl::std::Version;
    /// final `capabilities` — ordinal 11 (ridl §8).
    /// Provisioned externally and immutable for the lifetime of the running software instance: read-only, free of the query machinery, and safe to cache unconditionally.
    fn capabilities(&self) -> &Vec<crate::ridl::std::Label>;
}
/// Main vehicle status interface.
/// The provider face of `VehicleStatus` — what a component that implements this interface fulfils (ridl §10.1). A `final` has no entry here: it is provisioned externally and populated at binding initialization (ridl §8).
#[allow(async_fn_in_trait)]
pub trait VehicleStatusProvider {
    /// Publishes `currentSpeed` — signal ordinal 1 (ridl §4).
    fn publish_current_speed(&mut self, value: crate::veh::common::Speed);
    /// Publishes `engineTemp` — signal ordinal 2 (ridl §4).
    fn publish_engine_temp(&mut self, value: crate::veh::common::Temperature);
    /// Publishes `warnings` — signal ordinal 3 (ridl §4).
    fn publish_warnings(&mut self, value: crate::veh::common::WarningFlags);
    /// Raises `doorOpened` — event ordinal 4 (ridl §5).
    fn raise_door_opened(&mut self, occurrence: DoorPayload);
    /// Handles `setGear` — command ordinal 5 (ridl §6). The binding has already validated the payload and the `require` clauses; a violating command never reaches this method (ridl §6.2).
    async fn on_set_gear(&mut self, position: crate::veh::common::GearPosition);
    /// Handles `getAverageSpeed` — query ordinal 7 (ridl §7).
    async fn on_get_average_speed(
        &mut self,
        window: crate::ridl::std::Duration,
    ) -> crate::veh::common::Speed;
    /// Handles `streamFaults` — query ordinal 8 (ridl §7).
    fn on_stream_faults(
        &mut self,
        filter: DiagFilter,
    ) -> impl RidlStream<Item = FaultEvent>;
    /// Handles `getFaultPage` — query ordinal 9 (ridl §7).
    async fn on_get_fault_page(&mut self, filter: DiagFilter) -> FaultPageResult;
}
/// Resolved timing for every signal and event of `VehicleStatus`, keyed by the source name, in exact microseconds (ridl §9).
pub const VEHICLE_STATUS_TIMING: &[(&str, TimingConst)] = &[
    (
        "currentSpeed",
        TimingConst {
            mode: TimingMode::StrictPeriodic,
            min_us: Some(10000),
            max_us: Some(10000),
            default_applied: false,
        },
    ),
    (
        "engineTemp",
        TimingConst {
            mode: TimingMode::Range,
            min_us: Some(20000),
            max_us: Some(100000),
            default_applied: false,
        },
    ),
    (
        "warnings",
        TimingConst {
            mode: TimingMode::Range,
            min_us: Some(50000),
            max_us: Some(1000000),
            default_applied: false,
        },
    ),
    (
        "doorOpened",
        TimingConst {
            mode: TimingMode::Range,
            min_us: Some(50000),
            max_us: Some(500000),
            default_applied: false,
        },
    ),
];
/// Every `require` and `ensure` clause of `VehicleStatus` as data, in source order, for an observer to install (ridl §13).
pub const VEHICLE_STATUS_CONTRACTS: &[ContractStub] = &[
    ContractStub {
        id: "VehicleStatus.setGear.require[0]",
        kind: ContractKind::Require,
        source: "position != GearPosition.PARK || currentSpeed == 0.0",
        signals: &["VehicleStatus.currentSpeed"],
        params: &["position"],
        uses_result: false,
    },
    ContractStub {
        id: "VehicleStatus.getAverageSpeed.require[0]",
        kind: ContractKind::Require,
        source: "window > 0ms",
        signals: &[],
        params: &["window"],
        uses_result: false,
    },
    ContractStub {
        id: "VehicleStatus.getAverageSpeed.ensure[0]",
        kind: ContractKind::Ensure,
        source: "result >= 0.0",
        signals: &[],
        params: &[],
        uses_result: true,
    },
];
