crates/ridl-backend-rust/src/snapshots/ridl_backend_rust__tests__appendix_b_rust_snapshot.snap
---
source: crates/ridl-backend-rust/src/tests.rs
expression: rust_source
---
/// Vehicle speed over ground
///
/// Quantization (`step`) is not checked by `new`.
#[derive(Debug, Clone, Copy, PartialEq, PartialOrd)]
#[repr(transparent)]
pub struct Speed(f64);
impl Speed {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(
        value: f64,
    ) -> ::core::result::Result<Self, ::ridl_rt::payload::Violation> {
        if value < 0.0 {
            return ::core::result::Result::Err(::ridl_rt::payload::Violation {
                type_name: "Speed",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        if value > 250.0 {
            return ::core::result::Result::Err(::ridl_rt::payload::Violation {
                type_name: "Speed",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        ::core::result::Result::Ok(Self(value))
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: f64) -> Self {
        Self(value)
    }
    pub const fn get(self) -> f64 {
        self.0
    }
}
impl ::core::convert::TryFrom<f64> for Speed {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: f64) -> ::core::result::Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl ::core::convert::From<Speed> for f64 {
    fn from(value: Speed) -> Self {
        value.0
    }
}
impl Default for Speed {
    fn default() -> Self {
        Speed::new_unchecked(0.0)
    }
}
/// Coolant / ambient temperature
///
/// Quantization (`step`) is not checked by `new`.
#[derive(Debug, Clone, Copy, PartialEq, PartialOrd)]
#[repr(transparent)]
pub struct Temperature(f64);
impl Temperature {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(
        value: f64,
    ) -> ::core::result::Result<Self, ::ridl_rt::payload::Violation> {
        if value < -40.0 {
            return ::core::result::Result::Err(::ridl_rt::payload::Violation {
                type_name: "Temperature",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        if value > 125.0 {
            return ::core::result::Result::Err(::ridl_rt::payload::Violation {
                type_name: "Temperature",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        ::core::result::Result::Ok(Self(value))
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: f64) -> Self {
        Self(value)
    }
    pub const fn get(self) -> f64 {
        self.0
    }
}
impl ::core::convert::TryFrom<f64> for Temperature {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: f64) -> ::core::result::Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl ::core::convert::From<Temperature> for f64 {
    fn from(value: Temperature) -> Self {
        value.0
    }
}
impl Default for Temperature {
    fn default() -> Self {
        Temperature::new_unchecked(0.0)
    }
}
/// Engine crankshaft speed
///
/// Quantization (`step`) is not checked by `new`.
#[derive(Debug, Clone, Copy, PartialEq, PartialOrd)]
#[repr(transparent)]
pub struct RPM(f64);
impl RPM {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(
        value: f64,
    ) -> ::core::result::Result<Self, ::ridl_rt::payload::Violation> {
        if value < 0.0 {
            return ::core::result::Result::Err(::ridl_rt::payload::Violation {
                type_name: "RPM",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        if value > 8000.0 {
            return ::core::result::Result::Err(::ridl_rt::payload::Violation {
                type_name: "RPM",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        ::core::result::Result::Ok(Self(value))
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: f64) -> Self {
        Self(value)
    }
    pub const fn get(self) -> f64 {
        self.0
    }
}
impl ::core::convert::TryFrom<f64> for RPM {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: f64) -> ::core::result::Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl ::core::convert::From<RPM> for f64 {
    fn from(value: RPM) -> Self {
        value.0
    }
}
impl Default for RPM {
    fn default() -> Self {
        RPM::new_unchecked(0.0)
    }
}
/// Normalised ratio
///
/// Quantization (`step`) is not checked by `new`.
#[derive(Debug, Clone, Copy, PartialEq, PartialOrd)]
#[repr(transparent)]
pub struct Ratio(f64);
impl Ratio {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(
        value: f64,
    ) -> ::core::result::Result<Self, ::ridl_rt::payload::Violation> {
        if value < 0.0 {
            return ::core::result::Result::Err(::ridl_rt::payload::Violation {
                type_name: "Ratio",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        if value > 100.0 {
            return ::core::result::Result::Err(::ridl_rt::payload::Violation {
                type_name: "Ratio",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        ::core::result::Result::Ok(Self(value))
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: f64) -> Self {
        Self(value)
    }
    pub const fn get(self) -> f64 {
        self.0
    }
}
impl ::core::convert::TryFrom<f64> for Ratio {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: f64) -> ::core::result::Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl ::core::convert::From<Ratio> for f64 {
    fn from(value: Ratio) -> Self {
        value.0
    }
}
impl Default for Ratio {
    fn default() -> Self {
        Ratio::new_unchecked(0.0)
    }
}
#[derive(Debug, Clone, Copy, PartialEq, Eq, Hash, PartialOrd, Ord)]
#[repr(transparent)]
pub struct Counter(i64);
impl Counter {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(
        value: i64,
    ) -> ::core::result::Result<Self, ::ridl_rt::payload::Violation> {
        ::core::result::Result::Ok(Self(value))
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: i64) -> Self {
        Self(value)
    }
    pub const fn get(self) -> i64 {
        self.0
    }
}
impl ::core::convert::TryFrom<i64> for Counter {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: i64) -> ::core::result::Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl ::core::convert::From<Counter> for i64 {
    fn from(value: Counter) -> Self {
        value.0
    }
}
impl Default for Counter {
    fn default() -> Self {
        Counter::new_unchecked(0)
    }
}
/// Quantization (`step`) is not checked by `new`.
#[derive(Debug, Clone, Copy, PartialEq, PartialOrd)]
#[repr(transparent)]
pub struct Gain(f64);
impl Gain {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(
        value: f64,
    ) -> ::core::result::Result<Self, ::ridl_rt::payload::Violation> {
        if value < 0.0 {
            return ::core::result::Result::Err(::ridl_rt::payload::Violation {
                type_name: "Gain",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        if value > 1.0 {
            return ::core::result::Result::Err(::ridl_rt::payload::Violation {
                type_name: "Gain",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        ::core::result::Result::Ok(Self(value))
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: f64) -> Self {
        Self(value)
    }
    pub const fn get(self) -> f64 {
        self.0
    }
}
impl ::core::convert::TryFrom<f64> for Gain {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: f64) -> ::core::result::Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl ::core::convert::From<Gain> for f64 {
    fn from(value: Gain) -> Self {
        value.0
    }
}
impl Default for Gain {
    fn default() -> Self {
        Gain::new_unchecked(0.0)
    }
}
pub const MAX_SPEED: Speed = Speed::new_unchecked(250.0);
pub const SPEED_LIMIT_EU: Speed = Speed::new_unchecked(130.0);
pub const IDLE_RPM: RPM = RPM::new_unchecked(800.0);
pub const MAX_GEAR: i64 = 6;
#[derive(Debug, Clone, Copy, PartialEq, Eq, Hash)]
#[repr(i64)]
pub enum GearPosition {
    PARK = 0,
    DRIVE = 1,
    REVERSE = 2,
    NEUTRAL = 3,
}
impl ::core::convert::TryFrom<i64> for GearPosition {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: i64) -> ::core::result::Result<Self, Self::Error> {
        match value {
            0 => ::core::result::Result::Ok(Self::PARK),
            1 => ::core::result::Result::Ok(Self::DRIVE),
            2 => ::core::result::Result::Ok(Self::REVERSE),
            3 => ::core::result::Result::Ok(Self::NEUTRAL),
            _ => {
                ::core::result::Result::Err(::ridl_rt::payload::Violation {
                    type_name: "GearPosition",
                    rule: ::ridl_rt::payload::Rule::Variant,
                })
            }
        }
    }
}
impl ::core::convert::From<GearPosition> for i64 {
    fn from(value: GearPosition) -> Self {
        value as i64
    }
}
impl Default for GearPosition {
    fn default() -> Self {
        GearPosition::PARK
    }
}
#[derive(Debug, Clone, Copy, PartialEq, Eq, Hash)]
#[repr(i64)]
pub enum Warning {
    LOW_FUEL = 0,
    CHECK_ENGINE = 1,
    DOOR_OPEN = 2,
    SEATBELT = 3,
}
impl ::core::convert::TryFrom<i64> for Warning {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: i64) -> ::core::result::Result<Self, Self::Error> {
        match value {
            0 => ::core::result::Result::Ok(Self::LOW_FUEL),
            1 => ::core::result::Result::Ok(Self::CHECK_ENGINE),
            2 => ::core::result::Result::Ok(Self::DOOR_OPEN),
            3 => ::core::result::Result::Ok(Self::SEATBELT),
            _ => {
                ::core::result::Result::Err(::ridl_rt::payload::Violation {
                    type_name: "Warning",
                    rule: ::ridl_rt::payload::Rule::Variant,
                })
            }
        }
    }
}
impl ::core::convert::From<Warning> for i64 {
    fn from(value: Warning) -> Self {
        value as i64
    }
}
impl Default for Warning {
    fn default() -> Self {
        Warning::LOW_FUEL
    }
}
#[derive(Debug, Clone, Copy, PartialEq, Eq, Hash)]
#[repr(transparent)]
pub struct WarningFlags(i64);
impl WarningFlags {
    pub const LOW_FUEL: WarningFlags = WarningFlags(1 << 0);
    pub const CHECK_ENGINE: WarningFlags = WarningFlags(1 << 1);
    pub const DOOR_OPEN: WarningFlags = WarningFlags(1 << 2);
    pub const SEATBELT: WarningFlags = WarningFlags(1 << 3);
    /// The union of every declared bit. `TryFrom` refuses a value
    /// that carries any other bit.
    pub const DECLARED_MASK: i64 = 15;
    pub const fn get(self) -> i64 {
        self.0
    }
}
impl ::core::convert::TryFrom<i64> for WarningFlags {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: i64) -> ::core::result::Result<Self, Self::Error> {
        if value & !Self::DECLARED_MASK != 0 {
            return ::core::result::Result::Err(::ridl_rt::payload::Violation {
                type_name: "WarningFlags",
                rule: ::ridl_rt::payload::Rule::Variant,
            });
        }
        ::core::result::Result::Ok(Self(value))
    }
}
impl ::core::convert::From<WarningFlags> for i64 {
    fn from(value: WarningFlags) -> Self {
        value.0
    }
}
impl Default for WarningFlags {
    fn default() -> Self {
        WarningFlags(0)
    }
}
#[derive(Debug, Clone, Copy, PartialEq)]
#[repr(C)]
pub struct SpeedLimitPayload {
    pub limit: Speed,
    pub actual: Speed,
}
impl Default for SpeedLimitPayload {
    fn default() -> Self {
        SpeedLimitPayload {
            limit: Speed::default(),
            actual: Speed::default(),
        }
    }
}
#[derive(Debug, Clone, PartialEq)]
pub struct DriverProfile {
    pub name: crate::ridl::std::Name,
    pub speed: Speed,
    pub r#override: Option<Speed>,
    pub gears: i64,
}
#[derive(Debug, Clone, PartialEq)]
pub struct SensorBounds {
    pub range: SensorBoundsRange,
    pub readings: [Speed; 8],
    pub labels: Vec<crate::ridl::std::Label>,
    pub meta: Vec<(crate::ridl::std::Label, crate::ridl::std::Name)>,
}
#[derive(Debug, Clone, PartialEq)]
pub enum SensorResult {
    Ok(SensorReading),
    Err(SensorFault),
}
impl Default for SensorResult {
    fn default() -> Self {
        SensorResult::Ok(SensorReading::default())
    }
}
#[derive(Debug, Clone, PartialEq)]
#[repr(C)]
pub struct SensorReading {
    pub value: Speed,
    pub timestamp: crate::ridl::std::Timestamp,
}
impl Default for SensorReading {
    fn default() -> Self {
        SensorReading {
            value: Speed::default(),
            timestamp: crate::ridl::std::Timestamp::default(),
        }
    }
}
#[derive(Debug, Clone, PartialEq)]
pub struct SensorFault {
    pub code: Counter,
    pub message: crate::ridl::std::Message,
}
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub(crate) struct RawWheelFrame {
    pub ticks: Counter,
    pub frame: Vec<u8>,
}
#[derive(Debug, Clone, Copy, PartialEq)]
pub struct SensorBoundsRange {
    pub min: Speed,
    pub max: Speed,
}
impl Default for SensorBoundsRange {
    fn default() -> Self {
        SensorBoundsRange {
            min: Speed::default(),
            max: Speed::default(),
        }
    }
}
